test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/plx1_initializer_end_with_comma.plx
pub fn main(none) i32 {
    arr: [3]i32 = $(2, 1, 0,)
    return arr[2]
}
